<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:id="@+id/menu_group_scene">
        <item
            android:id="@+id/menu_item_resolve_cloud_anchor"
            android:title="@string/menu_item_resolve_cloud_anchor" />
        <item
            android:id="@+id/menu_item_clean_up_scene"
            android:title="@string/menu_item_clean_up_scene" />
        <item
            android:id="@+id/menu_item_settings"
            android:title="@string/menu_item_settings">
            <menu>
                <item
                    android:id="@+id/menu_item_sunlight"
                    android:checkable="true"
                    android:title="@string/menu_item_sunlight"
                    app:actionViewClass="android.view.View"
                    app:showAsAction="collapseActionView" />
                <item
                    android:id="@+id/menu_item_shadows"
                    android:checkable="true"
                    android:title="@string/menu_item_shadows"
                    app:actionViewClass="android.view.View"
                    app:showAsAction="collapseActionView" />
                <item
                    android:id="@+id/menu_item_plane_renderer"
                    android:checkable="true"
                    android:title="@string/menu_item_plane_renderer"
                    app:actionViewClass="android.view.View"
                    app:showAsAction="collapseActionView" />
                <item
                    android:id="@+id/menu_item_selection_visualizer"
                    android:checkable="true"
                    android:title="@string/menu_item_selection_visualizer"
                    app:actionViewClass="android.view.View"
                    app:showAsAction="collapseActionView" />
                <item
                    android:id="@+id/menu_item_reticle"
                    android:checkable="true"
                    android:title="@string/menu_item_reticle"
                    app:actionViewClass="android.view.View"
                    app:showAsAction="collapseActionView" />
                <item
                    android:id="@+id/menu_item_point_cloud"
                    android:checkable="true"
                    android:title="@string/menu_item_point_cloud"
                    app:actionViewClass="android.view.View"
                    app:showAsAction="collapseActionView" />
            </menu>
        </item>
    </group>
</menu>